syntax = "proto3";

package user;
option csharp_namespace = "User";
service UserService {
  rpc GetUser (UserIdRequest) returns (UserResponse);
}

message UserIdRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string role = 3; // Doctor / Patient
}
